--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>by.andersen.training</groupId>
     <artifactId>weather-cast</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -16,5 +17,6 @@
 
     <modules>
         <module>MicroserviceForWorkingWithDB</module>
+        <module>WeatherGenerator</module>
     </modules>
 </project>
