--- a/MicroserviceForWorkingWithDB/pom.xml
+++ b/MicroserviceForWorkingWithDB/pom.xml
@@ -48,6 +48,12 @@
             <version>5.4.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>by.andersen.training</groupId>
+            <artifactId>data-handler</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
